--- a/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notepad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7XY-9e-fLn">
-                                <rect key="frame" x="132" y="20" width="113" height="40"/>
+                                <rect key="frame" x="131.5" y="20" width="113" height="40"/>
                                 <fontDescription key="fontDescription" name="Exo-Medium" family="Exo" pointSize="30"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -97,7 +97,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Sy6-pf-iph">
-                                <rect key="frame" x="16" y="80" width="343" height="587"/>
+                                <rect key="frame" x="16" y="130" width="343" height="537"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="F1n-d7-eUP">
                                     <size key="itemSize" width="130" height="120"/>
@@ -169,15 +169,27 @@
                                     <segue destination="ddf-3P-fmM" kind="show" id="ry9-u8-mcA"/>
                                 </connections>
                             </button>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="URw-9a-Iyy">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <color key="tintColor" red="0.92855089899999999" green="0.66342449189999997" blue="0.68722754720000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.74601262810000002" green="0.32006174329999998" blue="0.27312535049999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="0Xh-1L-2gH" id="Dlo-Xl-j8x"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="0.74601262810000002" green="0.32006174329999998" blue="0.27312535049999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="URw-9a-Iyy" secondAttribute="trailing" id="1oA-AV-8vL"/>
+                            <constraint firstItem="URw-9a-Iyy" firstAttribute="leading" secondItem="Iam-7d-XIJ" secondAttribute="leading" id="65D-qz-u9b"/>
+                            <constraint firstItem="Sy6-pf-iph" firstAttribute="top" secondItem="URw-9a-Iyy" secondAttribute="bottom" constant="21" id="9WY-8h-bel"/>
                             <constraint firstItem="Sy6-pf-iph" firstAttribute="leading" secondItem="Iam-7d-XIJ" secondAttribute="leadingMargin" id="CEy-nz-B73"/>
                             <constraint firstItem="fqo-jB-46W" firstAttribute="top" secondItem="Sy6-pf-iph" secondAttribute="bottom" id="QLt-hM-ful"/>
-                            <constraint firstItem="Sy6-pf-iph" firstAttribute="top" secondItem="7XY-9e-fLn" secondAttribute="bottom" constant="20" id="SXl-RS-Y7I"/>
                             <constraint firstItem="7XY-9e-fLn" firstAttribute="centerX" secondItem="Iam-7d-XIJ" secondAttribute="centerX" id="V3c-Jn-mmr"/>
                             <constraint firstItem="7XY-9e-fLn" firstAttribute="top" secondItem="M5m-Oz-vQv" secondAttribute="bottom" id="Wjc-JT-m1W"/>
                             <constraint firstItem="Sy6-pf-iph" firstAttribute="trailing" secondItem="Iam-7d-XIJ" secondAttribute="trailingMargin" id="XDx-yh-oOv"/>
+                            <constraint firstItem="URw-9a-Iyy" firstAttribute="top" secondItem="7XY-9e-fLn" secondAttribute="bottom" constant="5" id="fkT-88-UIy"/>
                             <constraint firstItem="fqo-jB-46W" firstAttribute="top" secondItem="9SC-5X-h0B" secondAttribute="bottom" constant="25" id="jLf-Nb-8S5"/>
                             <constraint firstItem="9SC-5X-h0B" firstAttribute="centerX" secondItem="Sy6-pf-iph" secondAttribute="centerX" id="kK4-uY-HV1"/>
                         </constraints>
@@ -188,6 +200,7 @@
                     <connections>
                         <outlet property="addButton" destination="9SC-5X-h0B" id="YQ4-In-8Sd"/>
                         <outlet property="collectionView" destination="Sy6-pf-iph" id="8Yc-hB-ZeN"/>
+                        <outlet property="searchBar" destination="URw-9a-Iyy" id="BYN-eJ-M0E"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MXj-B1-c5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -239,7 +252,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="rightButtonAction:" destination="ddf-3P-fmM" eventType="touchUpInside" id="ePB-x7-Mx4"/>
+                                    <action selector="saveButtonAction:" destination="ddf-3P-fmM" eventType="touchUpInside" id="Afb-yh-upK"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uUk-sy-RCj" customClass="SZTextView">
@@ -253,6 +266,24 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Type note here..."/>
                                 </userDefinedRuntimeAttributes>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hoT-hO-xBp">
+                                <rect key="frame" x="162" y="592" width="50" height="50"/>
+                                <color key="backgroundColor" red="0.74601262810000002" green="0.32006174329999998" blue="0.27312535049999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="GA2-zV-r2i"/>
+                                    <constraint firstAttribute="width" constant="50" id="Qhk-Pg-hBa"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
+                                <state key="normal" image="delete"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="deleteButtonAction:" destination="ddf-3P-fmM" eventType="touchUpInside" id="jSY-V6-5Wd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.92855089902877808" green="0.66342449188232422" blue="0.68722754716873169" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -264,12 +295,15 @@
                             <constraint firstItem="65E-Vl-8zY" firstAttribute="top" secondItem="uUk-sy-RCj" secondAttribute="bottom" constant="30" id="Vgk-J7-dg4"/>
                             <constraint firstAttribute="trailing" secondItem="65E-Vl-8zY" secondAttribute="trailing" constant="25" id="c7y-SQ-iyu"/>
                             <constraint firstItem="R7H-1H-UNx" firstAttribute="leading" secondItem="xiM-F0-7Rp" secondAttribute="leading" constant="25" id="dqs-NW-O4a"/>
+                            <constraint firstItem="D7Z-cS-5As" firstAttribute="top" secondItem="hoT-hO-xBp" secondAttribute="bottom" constant="25" id="kq4-ez-mTb"/>
+                            <constraint firstItem="hoT-hO-xBp" firstAttribute="centerX" secondItem="xiM-F0-7Rp" secondAttribute="centerX" id="suR-aw-pP4"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cancelButton" destination="R7H-1H-UNx" id="o3I-dR-93g"/>
+                        <outlet property="deleteButton" destination="hoT-hO-xBp" id="ZJV-dT-Z5w"/>
                         <outlet property="noteTextView" destination="uUk-sy-RCj" id="BtX-oU-zPd"/>
-                        <outlet property="rightButton" destination="65E-Vl-8zY" id="nF2-IW-0Xs"/>
+                        <outlet property="saveButton" destination="65E-Vl-8zY" id="rA4-he-tdd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UFo-DJ-eDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -279,6 +313,7 @@
     </scenes>
     <resources>
         <image name="close" width="64" height="64"/>
+        <image name="delete" width="64" height="64"/>
         <image name="note" width="256" height="256"/>
         <image name="plus" width="64" height="64"/>
         <image name="save" width="64" height="64"/>
