--- a/TestApp/Base.lproj/Main.storyboard
+++ b/TestApp/Base.lproj/Main.storyboard
@@ -6,11 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Exo-Bold.otf">
+            <string>Exo-Bold</string>
+        </array>
         <array key="Exo-Medium.otf">
             <string>Exo-Medium</string>
         </array>
@@ -88,7 +90,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notepad" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7XY-9e-fLn">
-                                <rect key="frame" x="131.5" y="20" width="113" height="40"/>
+                                <rect key="frame" x="132" y="20" width="113" height="40"/>
                                 <fontDescription key="fontDescription" name="Exo-Medium" family="Exo" pointSize="30"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -100,48 +102,59 @@
                                 <rect key="frame" x="16" y="130" width="343" height="537"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="20" id="F1n-d7-eUP">
-                                    <size key="itemSize" width="130" height="120"/>
+                                    <size key="itemSize" width="163" height="166"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NoteCell" id="KaV-1d-AsY" customClass="NoteCell" customModule="TestApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="120"/>
+                                        <rect key="frame" x="90" y="0.0" width="163" height="166"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="130" height="120"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="163" height="166"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="note" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-r8-ic2">
-                                                    <rect key="frame" x="26" y="10" width="78" height="78"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="QiA-r8-ic2" secondAttribute="height" multiplier="1:1" id="Nio-v6-q5v"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Made yesterday!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rq4-4L-zTo">
-                                                    <rect key="frame" x="5" y="93" width="120" height="25"/>
+                                                    <rect key="frame" x="5" y="139" width="153" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="FIq-HH-ex8"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" name="Exo-Medium" family="Exo" pointSize="12"/>
+                                                    <fontDescription key="fontDescription" name="Exo-Bold" family="Exo" pointSize="12"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Goi-O5-ASw">
+                                                    <rect key="frame" x="8" y="66.5" width="147" height="13.5"/>
+                                                    <fontDescription key="fontDescription" name="Exo-Medium" family="Exo" pointSize="10"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H4C-ch-lrv">
+                                                    <rect key="frame" x="5" y="137" width="153" height="2"/>
+                                                    <color key="backgroundColor" white="1" alpha="0.5998289571005917" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="Ge2-jj-A4F"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.92855089902877808" green="0.66342449188232422" blue="0.68722754716873169" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="QiA-r8-ic2" firstAttribute="centerX" secondItem="KaV-1d-AsY" secondAttribute="centerX" id="Cig-H4-zuy"/>
-                                            <constraint firstItem="QiA-r8-ic2" firstAttribute="top" secondItem="KaV-1d-AsY" secondAttribute="top" constant="10" id="ES5-VC-seg"/>
+                                            <constraint firstItem="H4C-ch-lrv" firstAttribute="leading" secondItem="KaV-1d-AsY" secondAttribute="leading" constant="5" id="9Eh-OG-PH6"/>
+                                            <constraint firstItem="Goi-O5-ASw" firstAttribute="leading" secondItem="KaV-1d-AsY" secondAttribute="leading" constant="8" id="9vV-4K-lZe"/>
+                                            <constraint firstAttribute="trailing" secondItem="H4C-ch-lrv" secondAttribute="trailing" constant="5" id="JdM-3h-1aB"/>
                                             <constraint firstAttribute="trailing" secondItem="rq4-4L-zTo" secondAttribute="trailing" constant="5" id="SAM-de-C7Y"/>
+                                            <constraint firstAttribute="trailing" secondItem="Goi-O5-ASw" secondAttribute="trailing" constant="8" id="T4X-20-jr4"/>
                                             <constraint firstItem="rq4-4L-zTo" firstAttribute="leading" secondItem="KaV-1d-AsY" secondAttribute="leading" constant="5" id="aQ0-yo-vwJ"/>
+                                            <constraint firstItem="Goi-O5-ASw" firstAttribute="centerY" secondItem="KaV-1d-AsY" secondAttribute="centerY" constant="-10" id="gkM-9K-36Y"/>
+                                            <constraint firstItem="rq4-4L-zTo" firstAttribute="top" secondItem="H4C-ch-lrv" secondAttribute="bottom" id="mcv-YC-lHD"/>
                                             <constraint firstAttribute="bottom" secondItem="rq4-4L-zTo" secondAttribute="bottom" constant="2" id="mtE-r9-6iK"/>
-                                            <constraint firstItem="rq4-4L-zTo" firstAttribute="top" secondItem="QiA-r8-ic2" secondAttribute="bottom" constant="5" id="uff-5z-RXP"/>
+                                            <constraint firstItem="Goi-O5-ASw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="KaV-1d-AsY" secondAttribute="topMargin" id="w5T-uH-VC6"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="dateLabel" destination="rq4-4L-zTo" id="SHJ-A2-iGZ"/>
-                                            <outlet property="imageView" destination="QiA-r8-ic2" id="C2Q-MF-iJV"/>
+                                            <outlet property="noteLabel" destination="Goi-O5-ASw" id="aln-E9-gar"/>
                                             <segue destination="ddf-3P-fmM" kind="show" id="bjW-3r-ieo"/>
                                         </connections>
                                     </collectionViewCell>
@@ -314,7 +327,6 @@
     <resources>
         <image name="close" width="64" height="64"/>
         <image name="delete" width="64" height="64"/>
-        <image name="note" width="256" height="256"/>
         <image name="plus" width="64" height="64"/>
         <image name="save" width="64" height="64"/>
     </resources>
